[tool.poetry]
name = "deploy-pythonanywhere"
version = "0.1.0"
description = "Deploy to pythonanywhere using any webapp framework"
authors = ["Angel Fuenmayor <32184965+4ngelf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "deploypythonanywhere", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
